home hero cta changed revised hero logo sizing on mobile footer email cta fixed

--- a/projects/site2019/src/assets/scss/_footer.scss
+++ b/projects/site2019/src/assets/scss/_footer.scss
@@ -93,6 +93,7 @@
 
     &-container {
       display: flex;
+      height: 100%;
     }
 
     &-item {
