--- a/projects/site2019/src/assets/scss/pages/_home.scss
+++ b/projects/site2019/src/assets/scss/pages/_home.scss
@@ -42,11 +42,15 @@
     flex: 1;
     width: 100%;
     max-width: 500px;
-    padding: 0 $space;
 
     &-img {
       height: 100%;
       width: 100%;
+    }
+
+    @include mobile {
+      height: calc(100vh - #{$header-h + 400 + $space-xs});
+      min-height: 200px;
     }
   }
 
@@ -106,6 +110,7 @@
 
   &-misc {
     margin-top: $space-s;
+    margin-bottom: $space-s;
     display: flex;
     font-weight: bold;
 
@@ -332,6 +337,7 @@
       bottom: 100%;
       left: 0;
       height: 250px;
+      max-width: 100%;
       overflow: hidden;
       opacity: 0.7;
 
